--- a/main.css
+++ b/main.css
@@ -1,5 +1,14 @@
+
+/*
+* Prefixed by Autoprefixer
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
@@ -27,22 +36,37 @@ body {
     top: 0;
     width: 100%;
     z-index: 9999;
+    -webkit-transition: -webkit-transform .3s;
+    transition: -webkit-transform .3s;
+    -o-transition: transform .3s;
     transition: transform .3s;
-    box-shadow: 0 5px 8px rgba(0, 0, 0, .15);
+    transition: transform .3s, -webkit-transform .3s;
+    -webkit-box-shadow: 0 5px 8px rgba(0, 0, 0, .15);
+            box-shadow: 0 5px 8px rgba(0, 0, 0, .15);
 }
 
 #header.is-scrolling {
-    transform: translateY(-100px);
+    -webkit-transform: translateY(-100px);
+        -ms-transform: translateY(-100px);
+            transform: translateY(-100px);
 }
 
 #header.is-visible {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
 }
 
 #header .main-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 #header .main-title > a {
@@ -51,9 +75,13 @@ body {
 }
 
 #header .main-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style-type: none;
-    column-gap: .75rem;
+    -webkit-column-gap: .75rem;
+       -moz-column-gap: .75rem;
+            column-gap: .75rem;
 }
 
 #header .main-menu li > a {
@@ -61,6 +89,8 @@ body {
     text-transform: uppercase;
     color: #fff;
     font-weight: 600;
+    -webkit-transition: color .2s;
+    -o-transition: color .2s;
     transition: color .2s;
 }
 
@@ -73,17 +103,26 @@ body {
     position: absolute;
     right: 1rem;
     top: 50%;
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
     font-size: 1.5em;
     color: #fefefe;
     display: none;
 }
 
 .hero-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-top: 2rem;
     min-height: 450px;
     position: relative;
@@ -123,7 +162,9 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
 }
@@ -181,15 +222,26 @@ body {
 
 .sec .sec-seperator,
 .projects .cards-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     padding: 1rem 2rem;
-    column-gap: 1rem;
+    -webkit-column-gap: 1rem;
+       -moz-column-gap: 1rem;
+            column-gap: 1rem;
 }
 
 .sec:nth-child(odd) .sec-seperator {
-    flex-direction: row-reverse;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
 }
 
 .sec .cover-img {
@@ -200,7 +252,8 @@ body {
     height: 380px;
     margin: 0 0 1.5rem;
     border-radius: 15px;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
+    -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
+            box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
 }
 
 .sec.langs-known {
@@ -213,7 +266,8 @@ body {
     padding: .2rem .4rem;
     background-color: rgba(255, 255, 255, .15);
     border-radius: 5px;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
+    -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
+            box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
 }
 
 
@@ -223,9 +277,14 @@ body {
 }
 
 .langs-known .cards-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     gap: 1rem;
 }
 
@@ -235,7 +294,8 @@ body {
     padding: .75rem 1.75rem;
     font-weight: 600;
     border-radius: 5px;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
+    -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
+            box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
 }
 
 .sec.career {
@@ -324,7 +384,8 @@ body {
     height: 2px;
     top: 2px;
     left: -10px;
-    box-shadow: 129px 31px 0 #fff;
+    -webkit-box-shadow: 129px 31px 0 #fff;
+            box-shadow: 129px 31px 0 #fff;
 }
 
 #career .sec-title > h2::after {
@@ -332,7 +393,8 @@ body {
     height: 15px;
     bottom: 0;
     right: -9px;
-    box-shadow: -145px -18px 0 #fff;
+    -webkit-box-shadow: -145px -18px 0 #fff;
+            box-shadow: -145px -18px 0 #fff;
 }
 
 .sec.projects {
@@ -347,14 +409,21 @@ body {
     background-color: #fff;
     border-radius: 5px;
     overflow: hidden;
-    box-shadow: 2px 3px 5px rgba(0, 0, 0, .15);
+    -webkit-box-shadow: 2px 3px 5px rgba(0, 0, 0, .15);
+            box-shadow: 2px 3px 5px rgba(0, 0, 0, .15);
     width: 250px;
     max-width: 100%;
+    -webkit-transition: -webkit-transform .3s;
+    transition: -webkit-transform .3s;
+    -o-transition: transform .3s;
     transition: transform .3s;
+    transition: transform .3s, -webkit-transform .3s;
 }
 
 .projects .card-item:hover {
-    transform: translateY(-.25rem);
+    -webkit-transform: translateY(-.25rem);
+        -ms-transform: translateY(-.25rem);
+            transform: translateY(-.25rem);
 }
 
 
@@ -368,7 +437,8 @@ body {
 .projects .card-item .card-top .card-img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 
 
@@ -430,15 +500,24 @@ body {
     border-radius: 50%;
     color: #2e2e2e;
     opacity: 0;
-    transform: translateY(100px);
+    -webkit-transform: translateY(100px);
+        -ms-transform: translateY(100px);
+            transform: translateY(100px);
     pointer-events: none;
-    box-shadow: 0 5px 8px rgba(0, 0, 0, .15);
+    -webkit-box-shadow: 0 5px 8px rgba(0, 0, 0, .15);
+            box-shadow: 0 5px 8px rgba(0, 0, 0, .15);
+    -webkit-transition: opacity .3s, -webkit-transform .3s;
+    transition: opacity .3s, -webkit-transform .3s;
+    -o-transition: transform .3s, opacity .3s;
     transition: transform .3s, opacity .3s;
+    transition: transform .3s, opacity .3s, -webkit-transform .3s;
 }
 
 #backToTopBtn.is-visible {
     opacity: 1;
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
     pointer-events: unset;
 }
 
@@ -448,6 +527,8 @@ body {
     height: .25rem;
     background-color: #fed70e;
     width: 0;
+    -webkit-transition: width 100ms linear;
+    -o-transition: width 100ms linear;
     transition: width 100ms linear;
     z-index: 999;
 }
@@ -457,18 +538,26 @@ body {
     bottom: 1rem;
     left: .5rem;
     z-index: 999;
+    -webkit-transition: -webkit-transform .3s linear;
+    transition: -webkit-transform .3s linear;
+    -o-transition: transform .3s linear;
     transition: transform .3s linear;
+    transition: transform .3s linear, -webkit-transform .3s linear;
 }
 
 .floating-profiles-bar.is-hidden {
-    transform: translateY(150px);
+    -webkit-transform: translateY(150px);
+        -ms-transform: translateY(150px);
+            transform: translateY(150px);
 }
 
 .floating-profiles-bar .bar-title {
     position: absolute;
     top: -1.75rem;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
     background-color: #2e2e2e;
     color: #fefefe;
     padding: 0 .5rem;
@@ -530,8 +619,11 @@ body {
 }
 
 .footer-div {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     padding: 0 0 2rem;
 }
 
@@ -547,44 +639,63 @@ body {
     margin-left: .25rem;
     padding-bottom: .25rem;
     border-bottom: 2px dashed transparent;
+    -webkit-transition: .2s linear;
+    -o-transition: .2s linear;
     transition: .2s linear;
+    -webkit-transition-property: border, -webkit-transform;
+    transition-property: border, -webkit-transform;
+    -o-transition-property: border, transform;
     transition-property: border, transform;
+    transition-property: border, transform, -webkit-transform;
 }
 
 .footer-div li a:hover {
     border-bottom-color: #09f;
-    transform: translateX(5px);
+    -webkit-transform: translateX(5px);
+        -ms-transform: translateX(5px);
+            transform: translateX(5px);
 }
 
 .footer-div h4 {
     margin-bottom: 1rem;
     background-color: #09f;
-    box-shadow: -4px 3px #fff;
+    -webkit-box-shadow: -4px 3px #fff;
+            box-shadow: -4px 3px #fff;
 }
 
 .footer-div .right-div h4 {
-    box-shadow: 4px 3px;
+    -webkit-box-shadow: 4px 3px;
+            box-shadow: 4px 3px;
 }
 
 @media only screen and (max-width:768px) {
     .sec:nth-child(n) .sec-seperator {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
 }
 
 @media only screen and (max-width:720px) {
     .sec:nth-child(n) .sec-seperator {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
     .sec:nth-child(n) .sec-seperator,
     .projects .cards-wrap {
-        column-gap: unset;
+        -webkit-column-gap: unset;
+           -moz-column-gap: unset;
+                column-gap: unset;
         row-gap: 1rem;
         padding-left: 1rem;
         padding-right: 1rem;
     }
     .projects .cards-wrap {
-        flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     }
     .sec-seperator .cover-img {
         max-width: 100%;
@@ -596,19 +707,27 @@ body {
 
 @media only screen and (max-width:480px) {
     #header .main-menu {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         background-color: #2e2e2e;
         position: absolute;
         top: 3.5rem;
         right: 1rem;
         padding: 1rem 2rem;
-        column-gap: unset;
+        -webkit-column-gap: unset;
+           -moz-column-gap: unset;
+                column-gap: unset;
         row-gap: 1rem;
         opacity: 0;
         pointer-events: none;
         overflow: scroll;
         border-radius: 3px;
-        box-shadow: 0 8px 10px rgba(0, 0, 0, .15);
+        -webkit-box-shadow: 0 8px 10px rgba(0, 0, 0, .15);
+                box-shadow: 0 8px 10px rgba(0, 0, 0, .15);
+        -webkit-transition: opacity .3s linear;
+        -o-transition: opacity .3s linear;
         transition: opacity .3s linear;
         z-index: 999;
     }
@@ -626,8 +745,10 @@ body {
         border-radius: 50px;
     }
     .footer-div {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         row-gap: 1rem;
     }
 }
-
