--- a/main.css
+++ b/main.css
@@ -1,11 +1,4 @@
 
-/*
-* Prefixed by Autoprefixer
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
 * {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -126,7 +119,7 @@ body {
     padding-top: 2rem;
     min-height: 450px;
     position: relative;
-    background: rgba(0, 0, 0, .15) url(./images/hero-bg.jpg) no-repeat;
+    background: rgba(0, 0, 0, .15) url(./images/hero-cover.jpg) no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -656,14 +649,14 @@ body {
             transform: translateX(5px);
 }
 
-.footer-div h4 {
+.footer-div h3 {
     margin-bottom: 1rem;
     background-color: #09f;
     -webkit-box-shadow: -4px 3px #fff;
             box-shadow: -4px 3px #fff;
 }
 
-.footer-div .right-div h4 {
+.footer-div .right-div h3 {
     -webkit-box-shadow: 4px 3px;
             box-shadow: 4px 3px;
 }
